# asynqt

./: CMakeLists.txt  KF5AsynQtConfig.cmake.in  LICENSING  metainfo.yaml
autotests/: CMakeLists.txt  common.cpp  common.h  main.cpp
autotests/base/: cast_test.cpp  cast_test.h  continuewith_test.cpp  continuewith_test.h  filter_test.cpp  filter_test.h  flatten_test.cpp  flatten_test.h  transform_test.cpp  transform_test.h
autotests/core/: CMakeLists.txt  common.h  dbus.cpp  dbus.h  main.cpp  process.cpp  process.h
autotests/wrappers/: basic_test.cpp  basic_test.h  qdbus_test.cpp  qdbus_test.h  qprocess_test.cpp  qprocess_test.h
src/: CMakeLists.txt  libAsynQt.pc.cmake  version.cpp  version.h
src/base/: continuewith.h  flatten.h  transform.h
src/basic/: all.h  canceledfuture.cpp  canceledfuture.h  delayedfuture.cpp  delayedfuture.h  readyfuture.cpp  readyfuture.h
src/operations/: cast.h  continuewith.h  filter.h  flatten.h  transform.h
src/private/: utils_p.h
src/private/basic/: canceledfuture_p.h  delayedfuture_p.h  readyfuture_p.h
src/private/operations/: cast_p.h  filter_p.h  flatten_p.h  transform_p.h
src/private/wrappers/: dbus_p.h  process_p.h
src/wrappers/: common.cpp  common.h  dbus.h  process.cpp  process.h
